--- a/index.html
+++ b/index.html
@@ -14,4 +14,4 @@
     <button onclick="generatePassword()">Generate Password</button>
     <h3 id="generatedPassword"></h3>
 
-    <script src="main.js"></script>
+    <script src="checker.js"></script>
