--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <h1>Password Generator & Checker</h1>
 
     <h2>Generate a Password</h2>
-
-    <br>
-    <button onclick="generatePassword()">Generate Password</button>
+    <button>Generate Password</button>
     <h3 id="generatedPassword"></h3>
 
+    <!-- Link to external JavaScript file -->
     <script src="checker.js"></script>
+</body>
+</html>
